[gd_scene load_steps=6 format=2]

[ext_resource path="res://script/index.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/lock.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/lock_white.png" type="Texture" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/icons/user_white.png" type="Texture" id=5]

[node name="index" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.04971
margin_top = -1.25992
margin_right = -1.04974
margin_bottom = -1.25989
custom_constants/separation = -1
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 341.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 340.0
margin_right = 682.0
margin_bottom = 600.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_left = 30.0
margin_right = 312.0
margin_bottom = 600.0
rect_min_size = Vector2( 6.546, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 44
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 282.0
margin_bottom = 151.0
size_flags_horizontal = 3
text = "YUSA GAMES"
align = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 195.0
margin_right = 282.0
margin_bottom = 245.0

[node name="Label2" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer3"]
margin_right = 282.0
margin_bottom = 22.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Email:"

[node name="email" type="LineEdit" parent="HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer3"]
margin_top = 26.0
margin_right = 282.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 0 )
right_icon = ExtResource( 5 )
placeholder_text = "Email"
caret_blink = true

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 289.0
margin_right = 282.0
margin_bottom = 339.0

[node name="Label3" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 282.0
margin_bottom = 22.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Password:"

[node name="password" type="LineEdit" parent="HBoxContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 26.0
margin_right = 282.0
margin_bottom = 50.0
custom_icons/clear = ExtResource( 2 )
secret = true
right_icon = ExtResource( 3 )
placeholder_text = "Password"
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 383.0
margin_right = 282.0
margin_bottom = 405.0
custom_constants/separation = 90

[node name="cancel" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 96.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cancel"

[node name="login" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 186.0
margin_right = 282.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Login"

[node name="messagebox" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 449.0
margin_right = 282.0
margin_bottom = 471.0
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 681.0
margin_right = 1023.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 406.735
margin_top = 199.245
margin_right = 613.735
margin_bottom = 399.245
dialog_text = "Program is unable to connect with server. Are you sure internet is working?"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog2" type="AcceptDialog" parent="."]
margin_left = 406.735
margin_top = 199.245
margin_right = 613.735
margin_bottom = 399.245
dialog_text = "Are you sure?"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/login" to="." method="_on_login_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
